crates/elif-macros/tests/ui/bootstrap_non_async.stderr
error: Bootstrap macro can only be applied to async functions

💡 Change your function to:
async fn main() -> Result<(), HttpError> {}
 --> tests/ui/bootstrap_non_async.rs:3:1
  |
3 | fn main() -> Result<(), HttpError> {
  | ^^